--- a/NgImFormBootstrap/src/app/modules/form-builder/form-builder.component.scss
+++ b/NgImFormBootstrap/src/app/modules/form-builder/form-builder.component.scss
@@ -101,3 +101,23 @@
   position: absolute;
   z-index: 11;
 }
+
+.field-selection-card {
+  height: 150px !important;
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
+}
+
+.field-selection-card:hover {
+  cursor: pointer;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px);
+}
+
+.field-selection-card-selected {
+  box-shadow: 0 10px 20px #198754 !important;
+  transform: translateY(-2px);
+}
+
+.field-element-content {
+  height: 100% !important;
+}
