--- a/NgImFormBootstrap/src/app/modules/form-builder/form-builder.component.scss
+++ b/NgImFormBootstrap/src/app/modules/form-builder/form-builder.component.scss
@@ -2,7 +2,6 @@
   user-select: none;
 }
 
-/* You can add global styles to this file, and also import other style files */
 .details-sidebar {
   position: fixed;
   top: 0;
@@ -33,12 +32,12 @@
 .section.dragging {
   opacity: 0.6;
   transform: scale(0.98);
-  border: 2px dashed #999;
+  border: 2px dashed #dc3545;
 }
 
 .section.replace {
   transform: scale(0.98);
-  border: 2px dashed blue;
+  border: 2px dashed #0d6efd;
 }
 
 .field:hover {
@@ -59,4 +58,66 @@
 
 .top-grip-section {
   color: rgb(168, 168, 168);
+}
+
+.space {
+  height: 300px !important;
+  transform: scale(0.98);
+  border: 2px dashed #0d6efd;
+}
+
+.fade-in {
+  opacity: 0;
+  animation: fadeInAnim 0.5s ease-in forwards;
+}
+
+@keyframes fadeInAnim {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.overlay-dark {
+  transition: width 10s;
+  z-index: 10;
+  transition: background 0.4s ease;
+}
+
+.overlay-dark.show {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(2px);
+  pointer-events: auto;
+}
+
+.sidebar-overlay {
+  position: absolute;
+  z-index: 11;
+}
+
+.field-selection-card {
+  height: 150px !important;
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
+}
+
+.field-selection-card:hover {
+  cursor: pointer;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px);
+}
+
+.field-selection-card-selected {
+  box-shadow: 0 10px 20px #198754 !important;
+  transform: translateY(-2px);
+}
+
+.field-element-content {
+  height: 100% !important;
 }
