--- a/NgImFormBootstrap/src/app/modules/form-builder/textbox-properties-sidepanel/textbox-properties-sidepanel.component.html
+++ b/NgImFormBootstrap/src/app/modules/form-builder/textbox-properties-sidepanel/textbox-properties-sidepanel.component.html
@@ -39,7 +39,7 @@
           </div>
 
           <div class="form-group mb-2">
-            <label class="mb-1"><b>Type</b></label>
+            <label class="mb-1"><b>Type*</b></label>
             <select class="form-control" (change)="changeType()" formControlName="type">
               <option value="">Select Type</option>
               <option *ngFor="let textboxType of textboxTypes" value="{{textboxType.type}}">{{textboxType.type}}
